--- a/src/HW.Host.API.Core/appsettings.json
+++ b/src/HW.Host.API.Core/appsettings.json
@@ -18,7 +18,9 @@
     "Project_Name": "Mr.Fang网络 - HW",
     "Project_Name_English": "Mr.Fang NetWork - HW",
     "Version": "V1.1.0",
-    "ApiUrl": "https://192.168.6.88:2000",
+    "ApiUrl": "http://192.168.6.88:2000",
+    "ObjstorageUrl": "http://192.168.6.88:8888",
+    "SecurityCode": "hw888888" // 安全码
   },
   // 邮件服务默认配置
   "EmailServicesStrings": {
@@ -32,12 +34,12 @@
     //"MailContent": "【Mr.Fang网络】您的邮箱验证码是：{1}。请在页面中提交验证码完成验证。此验证码10分钟内有效，如非本人操作，请联系管理员。感谢支持！当前时间：{0}。",
     "MailContent": "此信息10分钟内有效，如非本人操作，请联系管理员。感谢支持！当前时间：{0}。",
     // IP地址
-    //"Host": "smtp.qq.com", //在这里我使用QQ邮箱，所以是smtp.qq.com
-    "Host": "14.17.57.241", //用上面的地址可能发送不了，直接用IP地址
+    "Host": "smtp.qq.com", //在这里我使用QQ邮箱，所以是smtp.qq.com
+    // "Host": "14.17.57.241", //用上面的地址可能发送不了，直接用IP地址
     // 端口号
-    "Port": "587",
+    "Port": "25",
     // 授权码
-    "AuthorzationCode": "krenixvzvqmldfeb",
+    "AuthorzationCode": "cnwnpvfggpwxdgfh",
     // 验证码位数
     "RandomCodeDigit": "6",
     // 邮箱判断正则表达式
@@ -84,7 +86,7 @@
     "Audience": "Mr.Fang",
     // 过期时间（30min）
     "Expired": 30
-  },
+  }
   // 客户端访问IP地址请求API接口Url
   // "ClientAccessIPAPIUrl": "https://pv.sohu.com/cityjson?ie=utf-8"
 }
