--- a/src/HW.Host.API.Core/Properties/launchSettings.json
+++ b/src/HW.Host.API.Core/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/HW.Host.API.Core",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:2000",
       "sslPort": 0
@@ -12,8 +16,6 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      //"launchUrl": "api/values",
-      //"launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
