修改SqlSugar的读取主键和自增列信息的方式 修改所有实体类的特征为EF，处外键引用增加一个SqlSugar跳过此字段的特征 修改数据库地址，用作测试使用

--- a/src/HW.Host.API.Application/HW.Host.API.Application.csproj
+++ b/src/HW.Host.API.Application/HW.Host.API.Application.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>F:\File\Visual Studio Files\HW.Host.API\src\HW.Host.API.Core\ExegesisXmlFile\HW.Host.API.Application.xml</DocumentationFile>
-    <OutputPath>F:\File\Visual Studio Files\HW.Host.API\src\HW.Host.API.Core\bin\Debug\</OutputPath>
+    <DocumentationFile>..\HW.Host.API.Core\ExegesisXmlFile\HW.Host.API.Application.xml</DocumentationFile>
+    <OutputPath>..\HW.Host.API.Core\bin\Debug\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
