--- a/src/HW.Host.API.Core/appsettings.json
+++ b/src/HW.Host.API.Core/appsettings.json
@@ -7,20 +7,22 @@
     "DbMSSQLMainIsLogSql": "True",
     // 是否记录Sql语句到数据库中
     "DbMSSQLMainIsLogSqlToLog": "True",
-    "Default": "Data Source=192.168.6.88; Initial Catalog=HWHost; User ID=sa;Password=F132951;",
+    //"Default": "Data Source=192.168.6.88; Initial Catalog=HWHost; User ID=sa;Password=F132951;",
+    "Default": "Data Source=139.196.113.147; Initial Catalog=HWHost; User ID=Hua.MrF;Password=Fh2269...;",
     "DefaultLogDBConfigId": "2",
     // 是否记录Sql语句到日志文件中
     "DbMSSQLLogConnection": "True",
-    "DefaultLog": "Data Source=192.168.6.88; Initial Catalog=HWHostLog; User ID=sa;Password=F132951;"
+    //"DefaultLog": "Data Source=192.168.6.88; Initial Catalog=HWHostLog; User ID=sa;Password=F132951;",
+    "DefaultLog": "Data Source=139.196.113.147; Initial Catalog=HWHost; User ID=Hua.MrF;Password=Fh2269...;"
   },
   // 项目信息
   "ProjectInfo": {
     "Project_Name": "Mr.Fang网络 - HW",
     "Project_Name_English": "Mr.Fang NetWork - HW",
     "Version": "V1.1.0",
-    "ApiUrl": "http://192.168.6.88:2000",
-    "ObjstorageUrl": "http://192.168.6.88:8888",
-    "SecurityCode": "hw888888" // 安全码
+    "ApiUrl": "http://localhost:2000/", // API接口地址
+    "ObjstorageUrl": "http://objstorage.fanghua.host/", // 对象存储地址
+    "SecurityCode": "Mr.Fang888888" // 安全码
   },
   // 邮件服务默认配置
   "EmailServicesStrings": {
@@ -28,22 +30,22 @@
     "AddresserID": "2875616188@qq.com",
     // 发件人邮箱名称
     "AddresserName": "Mr.Fang网络 - HW",
-    // 邮件标题
-    "MailTitle": "Mr.Fang网络 - HW",
+    // 授权码
+    "AuthorzationCode": "cnwnpvfggpwxdgfh",
+    // 邮箱判断正则表达式
+    "EmailExpression": "[1-9]\\d{7,10}@qq\\.com",
+    // IP地址
+    "Host": "smtp.qq.com", //在这里我使用QQ邮箱，所以是smtp.qq.com
     // 邮件内容后缀
     //"MailContent": "【Mr.Fang网络】您的邮箱验证码是：{1}。请在页面中提交验证码完成验证。此验证码10分钟内有效，如非本人操作，请联系管理员。感谢支持！当前时间：{0}。",
     "MailContent": "此信息10分钟内有效，如非本人操作，请联系管理员。感谢支持！当前时间：{0}。",
-    // IP地址
-    "Host": "smtp.qq.com", //在这里我使用QQ邮箱，所以是smtp.qq.com
+    // 邮件标题
+    "MailTitle": "Mr.Fang网络 - HW",
     // "Host": "14.17.57.241", //用上面的地址可能发送不了，直接用IP地址
     // 端口号
     "Port": "25",
-    // 授权码
-    "AuthorzationCode": "cnwnpvfggpwxdgfh",
     // 验证码位数
-    "RandomCodeDigit": "6",
-    // 邮箱判断正则表达式
-    "EmailExpression": "[1-9]\\d{7,10}@qq\\.com"
+    "RandomCodeDigit": "6"
   },
   // 百度翻译API接口信息
   "BaiduTranslateApiInfo": {
