修改SqlLog日志库的数据库名称

--- a/src/HW.Host.API.Core/appsettings.json
+++ b/src/HW.Host.API.Core/appsettings.json
@@ -13,14 +13,14 @@
     // 是否记录Sql语句到日志文件中
     "DbMSSQLLogConnection": "True",
     //"DefaultLog": "Data Source=192.168.6.88; Initial Catalog=HWHostLog; User ID=sa;Password=F132951;",
-    "DefaultLog": "Data Source=139.196.113.147; Initial Catalog=HWHost; User ID=Hua.MrF;Password=Fh2269...;"
+    "DefaultLog": "Data Source=139.196.113.147; Initial Catalog=HWHostLog; User ID=Hua.MrF;Password=Fh2269...;"
   },
   // 项目信息
   "ProjectInfo": {
     "Project_Name": "Mr.Fang网络 - HW",
     "Project_Name_English": "Mr.Fang NetWork - HW",
     "Version": "V1.1.0",
-    "ApiUrl": "http://localhost:2000/", // API接口地址
+    "ApiUrl": "https://hwapi.fanghua.host", // API接口地址
     "ObjstorageUrl": "http://objstorage.fanghua.host/", // 对象存储地址
     "SecurityCode": "Mr.Fang888888" // 安全码
   },
