修改对象存储资源路径

--- a/src/HW.Host.API.Core/appsettings.json
+++ b/src/HW.Host.API.Core/appsettings.json
@@ -21,7 +21,7 @@
     "Project_Name_English": "Mr.Fang NetWork - HW",
     "Version": "V1.1.0",
     "ApiUrl": "https://hwapi.fanghua.host", // API接口地址
-    "ObjstorageUrl": "http://objstorage.fanghua.host/", // 对象存储地址
+    "ObjstorageUrl": "https://objstorage.fanghua.host/", // 对象存储地址
     "SecurityCode": "Mr.Fang888888" // 安全码
   },
   // 邮件服务默认配置
